[DDW-582] Fix overlap issues

--- a/source/renderer/app/components/wallet/settings-general/WalletGeneralSettings.scss
+++ b/source/renderer/app/components/wallet/settings-general/WalletGeneralSettings.scss
@@ -17,7 +17,7 @@
       overflow: hidden;
     }
     .SimpleFormField_error {
-      margin-right: 52px;
+      margin-right: 82px;
     }
   }
 }
